# audio

html/: index.html
html/ref-c/: alsa-stream_8c-example.html  alsa-stream_8h-example.html  annotated.html  annotated_dup.js  aqs-stream_8c-example.html  aqs-stream_8h-example.html  build.html  changelog.html  classes.html  concept-model.html  contact.html  custom.css  data-stream_8c-example.html  data-stream_8h-example.html  deprecated.html  dir_17a8ba94b2e1934876223d2735faab82.html  dir_2be30b776551e622cb112d19a1a8443e.html  dir_5a693fb1288ff6db4d6308542951950a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ad8f67b02e1f872f4ae74e4513a51722.html  dir_daf6e0dce00d4997155e834a2881b58f.html  dir_e3d6be41fe8b62840a7d88f0b9ae0e75.html  examples.html  examples.js  faq.html  files.html  files.js  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  (+88 more)
html/ref-java/: SnsrDataFormat_8java.html  SnsrEnrollmentTest_8java-example.html  SnsrRC_8java.html  SnsrSession_8java.html  SnsrStreamAudioDeviceAndroid_8java-example.html  SnsrStreamAudioDeviceGeneric_8java-example.html  SnsrStreamAudioFormat_8java.html  SnsrStreamMeta_8java.html  SnsrStreamMode_8java.html  SnsrStream_8java.html  Snsr_8java.html  annotated.html  annotated_dup.js  build.html  changelog.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1Snsr-members.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1Snsr.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1Snsr.js  classcom_1_1sensory_1_1speech_1_1snsr_1_1SnsrJNI-members.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1SnsrJNI.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1SnsrSession-members.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1SnsrSession.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1SnsrSession.js  classcom_1_1sensory_1_1speech_1_1snsr_1_1SnsrStream-members.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1SnsrStream.html  classcom_1_1sensory_1_1speech_1_1snsr_1_1SnsrStream.js  classcom_1_1sensory_1_1speech_1_1snsr_1_1demo_1_1enrolltrigger_1_1ApplicationTest.html  (+211 more)
sample/c/: CMakeLists.txt  Makefile
sample/c/build-sample/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
sample/c/build-sample/src/: Makefile  cmake_install.cmake  live-enroll  push-audio  snsr-eval  spot-convert
sample/c/src/: CMakeLists.txt  alsa-stream.c  alsa-stream.h  aqs-stream.c  aqs-stream.h  data-stream.c  data-stream.h  data.c  live-enroll.c  live-segment.c  live-spot-stream.c  live-spot.c  push-audio.c  snsr-edit.c  snsr-eval.c  spot-convert.c  spot-data-stream.c  spot-data.c  spot-enroll.c  spot-hbg-enUS-1.4.0-m.c  wmme-stream.c  wmme-stream.h
sample/c/test/: dsp-checksum.txt  test-data-0.txt  test-data-1.txt  test-enroll-0.txt  test-enroll-1-alt.txt  test-enroll-1.txt  test-enroll-2.txt  test-enroll-3.txt  test-push-0.txt  test-push-1.txt
(+57 files in other folders)
